[gd_scene load_steps=6 format=1]

[ext_resource path="res://base/level_base.gd" type="Script" id=1]
[ext_resource path="res://base/LevelController.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/WendyOne-Regular.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=1]

resource/name = "rewind"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rewind:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":1, "values":[ true, false ] }
tracks/1/type = "value"
tracks/1/path = NodePath("rewind:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.5, 1 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 0.0, 1.0, 0.0 ] }

[sub_resource type="Animation" id=2]

resource/name = "solved"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("gameover:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ true ] }
tracks/1/type = "value"
tracks/1/path = NodePath("gameover:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="LevelBase" type="Node2D"]

script/script = ExtResource( 1 )

[node name="LevelController" parent="." instance=ExtResource( 2 )]

[node name="left" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 24.0
margin/right = 125.0
margin/bottom = 57.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Left: \?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="moves" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 663.0
margin/top = 24.0
margin/right = 832.0
margin/bottom = 57.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Moves: \?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gameover" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 300.0
margin/right = 832.0
margin/bottom = 333.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "PUZZLE SOLVED!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rewind" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 272.0
margin/right = 832.0
margin/bottom = 305.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Rewind"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anime" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rewind = SubResource( 1 )
anims/solved = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="rewind" from="LevelController" to="." method="_on_LevelController_rewind"]

[connection signal="solved" from="LevelController" to="." method="_on_LevelController_solved"]

[connection signal="start" from="LevelController" to="." method="_on_LevelController_start"]

[connection signal="update" from="LevelController" to="." method="_on_LevelController_update"]


[editable path="LevelController"]
